@@ -286,7 +286,7 @@ public class DefaultAntConfigurator implements AntConfigurator {
             extHybrisModuleDescriptorList
                 .parallelStream()
                 .map(e -> new AllJarsUnderDirEntry(new File(e.getRootDirectory(), HybrisConstants.LIB_DIRECTORY)))
-                .collect(Collectors.toList())
+                .toList()
         );
         final File libDir = new File(platformDir, HybrisConstants.ANT_LIB_DIR);
         classPaths.add(new AllJarsUnderDirEntry(libDir));
@@ -358,6 +358,6 @@ public class DefaultAntConfigurator implements AntConfigurator {
         final ConfigurationFactory configurationFactory = antRunConfigurationType.getConfigurationFactories()[0];
         final RunnerAndConfigurationSettings template = runManager.getConfigurationTemplate(configurationFactory);
         final AntRunConfiguration runConfiguration = (AntRunConfiguration) template.getConfiguration();
-        runManager.setBeforeRunTasks(runConfiguration, Collections.<BeforeRunTask>emptyList(), false);
+        runManager.setBeforeRunTasks(runConfiguration, Collections.<BeforeRunTask>emptyList());
     }
 }
