@@ -25,27 +25,19 @@ import com.intellij.facet.ModifiableFacetModel;
 import com.intellij.framework.FrameworkType;
 import com.intellij.framework.detection.DetectionExcludesConfiguration;
 import com.intellij.framework.detection.impl.FrameworkDetectionUtil;
-import com.intellij.ide.plugins.PluginManager;
+import com.intellij.ide.plugins.IdeaPluginDescriptor;
+import com.intellij.ide.plugins.PluginManagerCore;
 import com.intellij.ide.util.PropertiesComponent;
 import com.intellij.idea.plugin.hybris.common.HybrisConstants;
 import com.intellij.idea.plugin.hybris.common.services.CommonIdeaService;
-import com.intellij.idea.plugin.hybris.common.utils.HybrisI18NBundleUtils;
 import com.intellij.idea.plugin.hybris.impex.ImpexLanguage;
-import com.intellij.idea.plugin.hybris.project.configurators.CompilerOutputPathsConfigurator;
 import com.intellij.idea.plugin.hybris.project.configurators.ConfiguratorFactory;
-import com.intellij.idea.plugin.hybris.project.configurators.ContentRootConfigurator;
 import com.intellij.idea.plugin.hybris.project.configurators.EclipseConfigurator;
 import com.intellij.idea.plugin.hybris.project.configurators.FacetConfigurator;
 import com.intellij.idea.plugin.hybris.project.configurators.GradleConfigurator;
 import com.intellij.idea.plugin.hybris.project.configurators.GroupModuleConfigurator;
 import com.intellij.idea.plugin.hybris.project.configurators.HybrisConfiguratorCache;
 import com.intellij.idea.plugin.hybris.project.configurators.JavaCompilerConfigurator;
-import com.intellij.idea.plugin.hybris.project.configurators.JavadocModuleConfigurator;
-import com.intellij.idea.plugin.hybris.project.configurators.LibRootsConfigurator;
-import com.intellij.idea.plugin.hybris.project.configurators.ModuleSettingsConfigurator;
-import com.intellij.idea.plugin.hybris.project.configurators.ModulesDependenciesConfigurator;
-import com.intellij.idea.plugin.hybris.project.configurators.RunConfigurationConfigurator;
-import com.intellij.idea.plugin.hybris.project.configurators.SearchScopeConfigurator;
 import com.intellij.idea.plugin.hybris.project.configurators.SpringConfigurator;
 import com.intellij.idea.plugin.hybris.project.configurators.VersionControlSystemConfigurator;
 import com.intellij.idea.plugin.hybris.project.descriptors.ConfigHybrisModuleDescriptor;
@@ -65,6 +57,7 @@ import com.intellij.javaee.application.facet.JavaeeApplicationFacet;
 import com.intellij.javaee.web.facet.WebFacet;
 import com.intellij.lang.Language;
 import com.intellij.openapi.application.ApplicationManager;
+import com.intellij.openapi.application.ApplicationNamesInfo;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.extensions.PluginId;
 import com.intellij.openapi.externalSystem.model.ExternalSystemDataKeys;
@@ -76,6 +69,7 @@ import com.intellij.openapi.module.StdModuleTypes;
 import com.intellij.openapi.progress.ProgressIndicator;
 import com.intellij.openapi.progress.Task;
 import com.intellij.openapi.project.Project;
+import com.intellij.openapi.project.ProjectUtil;
 import com.intellij.openapi.projectRoots.JavaSdkVersion;
 import com.intellij.openapi.projectRoots.Sdk;
 import com.intellij.openapi.roots.LanguageLevelProjectExtension;
@@ -86,6 +80,7 @@ import com.intellij.openapi.roots.impl.storage.ClasspathStorage;
 import com.intellij.openapi.startup.StartupManager;
 import com.intellij.openapi.util.io.FileUtil;
 import com.intellij.openapi.vfs.VfsUtilCore;
+import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.psi.codeStyle.CodeStyleScheme;
 import com.intellij.psi.codeStyle.CodeStyleSchemes;
 import com.intellij.psi.codeStyle.CodeStyleSettings;
@@ -95,7 +90,6 @@ import com.intellij.spellchecker.dictionary.ProjectDictionary;
 import com.intellij.spellchecker.dictionary.UserDictionary;
 import com.intellij.spellchecker.state.ProjectDictionaryState;
 import com.intellij.spring.facet.SpringFacet;
-import com.intellij.util.PlatformUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.Validate;
 import org.jetbrains.annotations.NotNull;
@@ -106,11 +100,14 @@ import java.nio.file.Paths;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 
 import static com.intellij.idea.plugin.hybris.common.HybrisConstants.DICTIONARY_NAME;
 import static com.intellij.idea.plugin.hybris.common.HybrisConstants.DICTIONARY_WORDS;
+import static com.intellij.idea.plugin.hybris.common.HybrisConstants.IDEA_EDITION_ULTIMATE;
+import static com.intellij.idea.plugin.hybris.common.utils.HybrisI18NBundleUtils.message;
 import static com.intellij.idea.plugin.hybris.project.descriptors.HybrisModuleDescriptorType.CUSTOM;
 import static com.intellij.idea.plugin.hybris.project.utils.ModuleGroupUtils.fetchGroupMapping;
 import static com.intellij.idea.plugin.hybris.project.utils.PluginCommon.JAVAEE_PLUGIN_ID;
@@ -139,7 +136,7 @@ public class ImportProjectProgressModalWindow extends Task.Modal {
         final HybrisProjectDescriptor hybrisProjectDescriptor,
         final List<Module> modules
     ) {
-        super(project, HybrisI18NBundleUtils.message("hybris.project.import.commit"), false);
+        super(project, message("hybris.project.import.commit"), false);
         this.project = project;
         this.model = model;
         this.modifiableModelsProvider = new IdeModifiableModelsProviderImpl(project);
@@ -151,30 +148,14 @@ public class ImportProjectProgressModalWindow extends Task.Modal {
     @Override
     public synchronized void run(@NotNull final ProgressIndicator indicator) {
         indicator.setIndeterminate(true);
-        indicator.setText(HybrisI18NBundleUtils.message("hybris.project.import.preparation"));
+        indicator.setText(message("hybris.project.import.preparation"));
 
         final HybrisConfiguratorCache cache = new HybrisConfiguratorCache();
-        final List<HybrisModuleDescriptor> allModules = hybrisProjectDescriptor
-            .getModulesChosenForImport()
-            .stream()
-            .filter(e -> !(e instanceof MavenModuleDescriptor))
-            .filter(e -> !(e instanceof EclipseModuleDescriptor))
-            .filter(e -> !(e instanceof GradleModuleDescriptor))
-            .collect(Collectors.toList());
-        final LibRootsConfigurator libRootsConfigurator = configuratorFactory.getLibRootsConfigurator();
-        final List<FacetConfigurator> facetConfigurators = configuratorFactory.getFacetConfigurators();
-        final ContentRootConfigurator regularContentRootConfigurator = configuratorFactory.getRegularContentRootConfigurator();
-        final ContentRootConfigurator readOnlyContentRootConfigurator = configuratorFactory.getReadOnlyContentRootConfigurator();
-        final CompilerOutputPathsConfigurator compilerOutputPathsConfigurator = configuratorFactory.getCompilerOutputPathsConfigurator();
-        final ModulesDependenciesConfigurator modulesDependenciesConfigurator = configuratorFactory.getModulesDependenciesConfigurator();
+        final List<HybrisModuleDescriptor> allModules = getHybrisModuleDescriptors();
+
         final SpringConfigurator springConfigurator = configuratorFactory.getSpringConfigurator();
-        final GroupModuleConfigurator groupModuleConfigurator = configuratorFactory.getGroupModuleConfigurator();
-        final JavadocModuleConfigurator javadocModuleConfigurator = configuratorFactory.getJavadocModuleConfigurator();
-        final ModuleSettingsConfigurator moduleSettingsConfigurator = configuratorFactory.getModuleSettingsConfigurator();
+        final var groupModuleConfigurator = configuratorFactory.getGroupModuleConfigurator();
         final VersionControlSystemConfigurator versionControlSystemConfigurator = configuratorFactory.getVersionControlSystemConfigurator();
-        final RunConfigurationConfigurator debugRunConfigurationConfigurator = configuratorFactory.getDebugRunConfigurationConfigurator();
-        final RunConfigurationConfigurator testRunConfigurationConfigurator = configuratorFactory.getTestRunConfigurationConfigurator();
-        final SearchScopeConfigurator searchScopeConfigurator = configuratorFactory.getSearchScopeConfigurator();
 
         this.initializeHybrisProjectSettings(project);
         this.updateProjectDictionary(project, hybrisProjectDescriptor.getModulesChosenForImport());
@@ -184,67 +165,19 @@ public class ImportProjectProgressModalWindow extends Task.Modal {
         this.disableWrapOnType(ImpexLanguage.getInstance());
         PropertiesComponent.getInstance(project).setValue(SHOW_UNLINKED_GRADLE_POPUP, false);
 
-        if (PlatformUtils.isIdeaUltimate()) {
-            indicator.setText(HybrisI18NBundleUtils.message("hybris.project.import.facets"));
-            if (isPluginActive(SPRING_PLUGIN_ID)) {
-                this.excludeFrameworkDetection(project, SpringFacet.FACET_TYPE_ID);
-            }
-            if (isPluginActive(JAVAEE_PLUGIN_ID)) {
-                this.excludeFrameworkDetection(project, WebFacet.ID);
-                this.excludeFrameworkDetection(project, JavaeeApplicationFacet.ID);
-            }
-        }
+        processUltimateEdition(indicator);
+
         ModifiableModuleModel rootProjectModifiableModel = model == null
             ? modifiableModelsProvider.getModifiableModuleModel()
             : model;
 
-        indicator.setText(HybrisI18NBundleUtils.message("hybris.project.import.spring"));
+        indicator.setText(message("hybris.project.import.spring"));
         springConfigurator.findSpringConfiguration(allModules);
         groupModuleConfigurator.findDependencyModules(allModules);
         int counter = 0;
 
         for (HybrisModuleDescriptor moduleDescriptor : allModules) {
-            indicator.setText(HybrisI18NBundleUtils.message(
-                "hybris.project.import.module.import",
-                moduleDescriptor.getName()
-            ));
-            indicator.setText2(HybrisI18NBundleUtils.message("hybris.project.import.module.settings"));
-            final Module javaModule = rootProjectModifiableModel.newModule(
-                moduleDescriptor.getIdeaModuleFile().getAbsolutePath(), StdModuleTypes.JAVA.getId()
-            );
-
-            moduleSettingsConfigurator.configure(moduleDescriptor, javaModule);
-
-            final ModifiableRootModel modifiableRootModel = modifiableModelsProvider.getModifiableRootModel(javaModule);
-            final ModifiableFacetModel modifiableFacetModel = modifiableModelsProvider.getModifiableFacetModel(javaModule);
-
-            indicator.setText2(HybrisI18NBundleUtils.message("hybris.project.import.module.sdk"));
-            ClasspathStorage.setStorageType(modifiableRootModel, ClassPathStorageUtil.DEFAULT_STORAGE);
-
-            modifiableRootModel.inheritSdk();
-
-            indicator.setText2(HybrisI18NBundleUtils.message("hybris.project.import.module.libs"));
-            libRootsConfigurator.configure(modifiableRootModel, moduleDescriptor, modifiableModelsProvider, indicator);
-            indicator.setText2(HybrisI18NBundleUtils.message("hybris.project.import.module.content"));
-
-            if (shouldBeTreatedAsReadOnly(moduleDescriptor)) {
-                readOnlyContentRootConfigurator.configure(modifiableRootModel, moduleDescriptor);
-            } else {
-                regularContentRootConfigurator.configure(modifiableRootModel, moduleDescriptor);
-            }
-            indicator.setText2(HybrisI18NBundleUtils.message("hybris.project.import.module.outputpath"));
-            compilerOutputPathsConfigurator.configure(modifiableRootModel, moduleDescriptor);
-            indicator.setText2(HybrisI18NBundleUtils.message("hybris.project.import.module.javadoc"));
-            javadocModuleConfigurator.configure(modifiableRootModel, moduleDescriptor,indicator);
-            indicator.setText2(HybrisI18NBundleUtils.message("hybris.project.import.module.groups"));
-            groupModuleConfigurator.configure(rootProjectModifiableModel, javaModule, moduleDescriptor);
-
-            indicator.setText2(HybrisI18NBundleUtils.message("hybris.project.import.module.facet"));
-            for (FacetConfigurator facetConfigurator : facetConfigurators) {
-                facetConfigurator.configure(
-                    modifiableFacetModel, moduleDescriptor, javaModule, modifiableRootModel
-                );
-            }
+            final Module javaModule = createJavaModule(indicator, rootProjectModifiableModel, moduleDescriptor, groupModuleConfigurator);
             modules.add(javaModule);
             counter++;
 
@@ -261,75 +194,158 @@ public class ImportProjectProgressModalWindow extends Task.Modal {
             }
         }
 
-        indicator.setText(HybrisI18NBundleUtils.message("hybris.project.import.dependencies"));
+        indicator.setText(message("hybris.project.import.dependencies"));
         indicator.setText2("");
-        modulesDependenciesConfigurator.configure(hybrisProjectDescriptor, modifiableModelsProvider);
+        configuratorFactory.getModulesDependenciesConfigurator().configure(hybrisProjectDescriptor, modifiableModelsProvider);
         springConfigurator.configureDependencies(hybrisProjectDescriptor, modifiableModelsProvider);
-        indicator.setText(HybrisI18NBundleUtils.message("hybris.project.import.runconfigurations"));
-        debugRunConfigurationConfigurator.configure(hybrisProjectDescriptor, project, cache);
 
-        if (testRunConfigurationConfigurator != null) {
-            testRunConfigurationConfigurator.configure(hybrisProjectDescriptor, project, cache);
-        }
-        indicator.setText(HybrisI18NBundleUtils.message("hybris.project.import.vcs"));
+        indicator.setText(message("hybris.project.import.runconfigurations"));
+        configuratorFactory.getDebugRunConfigurationConfigurator().configure(hybrisProjectDescriptor, project, cache);
+
+        Optional.ofNullable(configuratorFactory.getTestRunConfigurationConfigurator())
+                .ifPresent(testRunConfigurationConfigurator -> testRunConfigurationConfigurator.configure(hybrisProjectDescriptor, project, cache));
+
+        indicator.setText(message("hybris.project.import.vcs"));
         versionControlSystemConfigurator.configure(hybrisProjectDescriptor, project);
-        indicator.setText(HybrisI18NBundleUtils.message("hybris.project.import.search.scope"));
-        searchScopeConfigurator.configure(project, rootProjectModifiableModel);
-        indicator.setText(HybrisI18NBundleUtils.message("hybris.project.import.saving.project"));
+
+        indicator.setText(message("hybris.project.import.search.scope"));
+        configuratorFactory.getSearchScopeConfigurator().configure(project, rootProjectModifiableModel);
+
+        indicator.setText(message("hybris.project.import.saving.project"));
 
         ApplicationManager.getApplication().invokeAndWait(
             () -> ApplicationManager.getApplication().runWriteAction(modifiableModelsProvider::commit));
 
-        configuratorFactory.getLoadedConfigurator().configure(
-            project, hybrisProjectDescriptor.getModulesChosenForImport());
+        configuratorFactory.getLoadedConfigurator().configure(project, hybrisProjectDescriptor.getModulesChosenForImport());
 
+        configureJavaCompiler(indicator, cache);
+        configureEclipseModules(indicator, groupModuleConfigurator);
+        configureGradleModules(indicator, groupModuleConfigurator);
+        project.putUserData(ExternalSystemDataKeys.NEWLY_CREATED_PROJECT, Boolean.TRUE);
+    }
+
+    private void processUltimateEdition(final @NotNull ProgressIndicator indicator) {
+        if (IDEA_EDITION_ULTIMATE.equalsIgnoreCase(ApplicationNamesInfo.getInstance().getEditionName())) {
+            indicator.setText(message("hybris.project.import.facets"));
+            if (isPluginActive(SPRING_PLUGIN_ID)) {
+                this.excludeFrameworkDetection(project, SpringFacet.FACET_TYPE_ID);
+            }
+            if (isPluginActive(JAVAEE_PLUGIN_ID)) {
+                this.excludeFrameworkDetection(project, WebFacet.ID);
+                this.excludeFrameworkDetection(project, JavaeeApplicationFacet.ID);
+            }
+        }
+    }
+
+    @NotNull
+    private Module createJavaModule(
+        final @NotNull ProgressIndicator indicator,
+        final ModifiableModuleModel rootProjectModifiableModel,
+        final HybrisModuleDescriptor moduleDescriptor,
+        final GroupModuleConfigurator groupModuleConfigurator
+    ) {
+        indicator.setText(message("hybris.project.import.module.import", moduleDescriptor.getName()));
+        indicator.setText2(message("hybris.project.import.module.settings"));
+        final Module javaModule = rootProjectModifiableModel.newModule(
+            moduleDescriptor.getIdeaModuleFile().getAbsolutePath(), StdModuleTypes.JAVA.getId()
+        );
+
+        configuratorFactory.getModuleSettingsConfigurator().configure(moduleDescriptor, javaModule);
+
+        final ModifiableRootModel modifiableRootModel = modifiableModelsProvider.getModifiableRootModel(javaModule);
+        final ModifiableFacetModel modifiableFacetModel = modifiableModelsProvider.getModifiableFacetModel(javaModule);
+
+        indicator.setText2(message("hybris.project.import.module.sdk"));
+        ClasspathStorage.setStorageType(modifiableRootModel, ClassPathStorageUtil.DEFAULT_STORAGE);
+
+        modifiableRootModel.inheritSdk();
+
+        indicator.setText2(message("hybris.project.import.module.libs"));
+        configuratorFactory.getLibRootsConfigurator().configure(modifiableRootModel, moduleDescriptor, modifiableModelsProvider, indicator);
+        indicator.setText2(message("hybris.project.import.module.content"));
+
+        if (shouldBeTreatedAsReadOnly(moduleDescriptor)) {
+            configuratorFactory.getReadOnlyContentRootConfigurator().configure(modifiableRootModel, moduleDescriptor);
+        } else {
+            configuratorFactory.getRegularContentRootConfigurator().configure(modifiableRootModel, moduleDescriptor);
+        }
+        indicator.setText2(message("hybris.project.import.module.outputpath"));
+        configuratorFactory.getCompilerOutputPathsConfigurator().configure(modifiableRootModel, moduleDescriptor);
+        indicator.setText2(message("hybris.project.import.module.javadoc"));
+        configuratorFactory.getJavadocModuleConfigurator().configure(modifiableRootModel, moduleDescriptor, indicator);
+        indicator.setText2(message("hybris.project.import.module.groups"));
+        groupModuleConfigurator.configure(rootProjectModifiableModel, javaModule, moduleDescriptor);
+
+        indicator.setText2(message("hybris.project.import.module.facet"));
+        for (final FacetConfigurator facetConfigurator : configuratorFactory.getFacetConfigurators()) {
+            facetConfigurator.configure(modifiableFacetModel, moduleDescriptor, javaModule, modifiableRootModel);
+        }
+        return javaModule;
+    }
+
+    private List<HybrisModuleDescriptor> getHybrisModuleDescriptors() {
+        return hybrisProjectDescriptor
+            .getModulesChosenForImport()
+            .stream()
+            .filter(e -> !(e instanceof MavenModuleDescriptor))
+            .filter(e -> !(e instanceof EclipseModuleDescriptor))
+            .filter(e -> !(e instanceof GradleModuleDescriptor))
+            .collect(Collectors.toList());
+    }
+
+    private void configureJavaCompiler(final @NotNull ProgressIndicator indicator, final HybrisConfiguratorCache cache) {
         final JavaCompilerConfigurator compilerConfigurator = configuratorFactory.getCompilerConfigurator();
 
-        if (compilerConfigurator != null) {
-            indicator.setText(HybrisI18NBundleUtils.message("hybris.project.import.compiler"));
-            compilerConfigurator.configure(hybrisProjectDescriptor, project, cache);
-        }
+        if (compilerConfigurator == null) return;
+
+        indicator.setText(message("hybris.project.import.compiler"));
+        compilerConfigurator.configure(hybrisProjectDescriptor, project, cache);
+    }
+
+    private void configureEclipseModules(final @NotNull ProgressIndicator indicator, final GroupModuleConfigurator groupModuleConfigurator) {
         final EclipseConfigurator eclipseConfigurator = configuratorFactory.getEclipseConfigurator();
 
-        if (eclipseConfigurator != null) {
-            indicator.setText(HybrisI18NBundleUtils.message("hybris.project.import.eclipse"));
+        if (eclipseConfigurator == null) return;
 
-            try {
-                final List<EclipseModuleDescriptor> eclipseModules = hybrisProjectDescriptor
-                    .getModulesChosenForImport()
-                    .stream()
-                    .filter(e -> e instanceof EclipseModuleDescriptor)
-                    .map(e -> (EclipseModuleDescriptor) e)
-                    .collect(Collectors.toList());
-                if (!eclipseModules.isEmpty()) {
-                    Map<String, String[]> eclipseGroupMapping = fetchGroupMapping(groupModuleConfigurator, eclipseModules);
-                    eclipseConfigurator.configure(hybrisProjectDescriptor, project, eclipseModules, eclipseGroupMapping);
-                }
-            } catch (Exception e) {
-                LOG.error("Can not import Eclipse modules due to an error.", e);
+        indicator.setText(message("hybris.project.import.eclipse"));
+
+        try {
+            final List<EclipseModuleDescriptor> eclipseModules = hybrisProjectDescriptor
+                .getModulesChosenForImport()
+                .stream()
+                .filter(e -> e instanceof EclipseModuleDescriptor)
+                .map(e -> (EclipseModuleDescriptor) e)
+                .collect(Collectors.toList());
+            if (!eclipseModules.isEmpty()) {
+                Map<String, String[]> eclipseGroupMapping = fetchGroupMapping(groupModuleConfigurator, eclipseModules);
+                eclipseConfigurator.configure(hybrisProjectDescriptor, project, eclipseModules, eclipseGroupMapping);
             }
+        } catch (Exception e) {
+            LOG.error("Can not import Eclipse modules due to an error.", e);
         }
+    }
+
+    private void configureGradleModules(final @NotNull ProgressIndicator indicator, final GroupModuleConfigurator groupModuleConfigurator) {
         final GradleConfigurator gradleConfigurator = configuratorFactory.getGradleConfigurator();
 
-        if (gradleConfigurator != null) {
-            indicator.setText(HybrisI18NBundleUtils.message("hybris.project.import.gradle"));
+        if (gradleConfigurator == null) return;
 
-            try {
-                final List<GradleModuleDescriptor> gradleModules = hybrisProjectDescriptor
-                    .getModulesChosenForImport()
-                    .stream()
-                    .filter(e -> e instanceof GradleModuleDescriptor)
-                    .map(e -> (GradleModuleDescriptor) e)
-                    .collect(Collectors.toList());
-                if (!gradleModules.isEmpty()) {
-                    Map<String, String[]> gradleRootGroupMapping = fetchGroupMapping(groupModuleConfigurator, gradleModules);
-                    gradleConfigurator.configure(hybrisProjectDescriptor, project, gradleModules, gradleRootGroupMapping);
-                }
-            } catch (Exception e) {
-                LOG.error("Can not import Gradle modules due to an error.", e);
+        indicator.setText(message("hybris.project.import.gradle"));
+
+        try {
+            final List<GradleModuleDescriptor> gradleModules = hybrisProjectDescriptor
+                .getModulesChosenForImport()
+                .stream()
+                .filter(e -> e instanceof GradleModuleDescriptor)
+                .map(e -> (GradleModuleDescriptor) e)
+                .collect(Collectors.toList());
+            if (!gradleModules.isEmpty()) {
+                final Map<String, String[]> gradleRootGroupMapping = fetchGroupMapping(groupModuleConfigurator, gradleModules);
+                gradleConfigurator.configure(hybrisProjectDescriptor, project, gradleModules, gradleRootGroupMapping);
             }
+        } catch (Exception e) {
+            LOG.error("Can not import Gradle modules due to an error.", e);
         }
-        project.putUserData(ExternalSystemDataKeys.NEWLY_CREATED_PROJECT, Boolean.TRUE);
     }
 
     private void updateProjectDictionary(
@@ -347,10 +363,10 @@ public class ImportProjectProgressModalWindow extends Task.Modal {
         }
         hybrisDictionary.addToDictionary(DICTIONARY_WORDS);
         hybrisDictionary.addToDictionary(project.getName().toLowerCase());
-        Set<String> moduleNames = modules.stream()
-                                         .map(HybrisModuleDescriptor::getName)
-                                         .map(String::toLowerCase)
-                                         .collect(Collectors.toSet());
+        final Set<String> moduleNames = modules.stream()
+                                               .map(HybrisModuleDescriptor::getName)
+                                               .map(String::toLowerCase)
+                                               .collect(Collectors.toSet());
         hybrisDictionary.addToDictionary(moduleNames);
     }
 
@@ -360,7 +376,11 @@ public class ImportProjectProgressModalWindow extends Task.Modal {
         final @NotNull HybrisProjectSettings hybrisProjectSettings = HybrisProjectSettingsComponent.getInstance(project)
                                                                                                    .getState();
         hybrisProjectSettings.setHybrisProject(true);
-        final String version = PluginManager.getPlugin(PluginId.getId(HybrisConstants.PLUGIN_ID)).getVersion();
+        final IdeaPluginDescriptor plugin = PluginManagerCore.getPlugin(PluginId.getId(HybrisConstants.PLUGIN_ID));
+
+        if (plugin == null) return;
+
+        final String version = plugin.getVersion();
         hybrisProjectSettings.setImportedByVersion(version);
     }
 
@@ -390,7 +410,11 @@ public class ImportProjectProgressModalWindow extends Task.Modal {
                                                                                           .getState();
         final File customDirectory = hybrisProjectDescriptor.getExternalExtensionsDirectory();
         final File hybrisDirectory = hybrisProjectDescriptor.getHybrisDistributionDirectory();
-        final File baseDirectory = VfsUtilCore.virtualToIoFile(project.getBaseDir());
+        final VirtualFile projectDir = ProjectUtil.guessProjectDir(project);
+
+        if (projectDir == null) return;
+
+        final File baseDirectory = VfsUtilCore.virtualToIoFile(projectDir);
         final Path projectPath = Paths.get(baseDirectory.getAbsolutePath());
         final Path hybrisPath = Paths.get(hybrisDirectory.getAbsolutePath());
         final Path relativeHybrisPath = projectPath.relativize(hybrisPath);
@@ -462,7 +486,7 @@ public class ImportProjectProgressModalWindow extends Task.Modal {
 
         CommonIdeaService.getInstance().fixRemoteConnectionSettings(project);
 
-        StartupManager.getInstance(project).runWhenProjectIsInitialized(() -> {
+        StartupManager.getInstance(project).runAfterOpened(() -> {
             project.getMessageBus().syncPublisher(HybrisDeveloperSpecificProjectSettingsListener.TOPIC).hacConnectionSettingsChanged();
             project.getMessageBus().syncPublisher(HybrisDeveloperSpecificProjectSettingsListener.TOPIC).solrConnectionSettingsChanged();
         });
@@ -472,7 +496,7 @@ public class ImportProjectProgressModalWindow extends Task.Modal {
         final List<String> toBeImportedNames = hybrisProjectDescriptor
             .getModulesChosenForImport().stream()
             .map(HybrisModuleDescriptor::getName)
-            .collect(Collectors.toList());
+            .toList();
         return hybrisProjectDescriptor
             .getFoundModules().stream()
             .filter(e -> !hybrisProjectDescriptor.getModulesChosenForImport().contains(e))
